--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+a {
+    text-decoration: none;
+    color: chocolate;
+}
+
 @font-face {
     font-family: helvetica;
     src: url(../fonts/Helvetica.otf)
